--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,17 +15,17 @@
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
-            <a href="#">Books</a>
+            <a routerLink="/category/1" routerLinkActive="active-link">Books</a>
           </li>
           <li>
-            <a href="#">Coffee Mugs</a>
+            <a routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
           </li>
-          <li>
+          <!-- <li>
             <a href="#">Mouse Pads</a>
           </li>
           <li>
             <a href="#">Luggage Tags</a>
-          </li>
+          </li> -->
         </ul>
       </nav>
     </div>
@@ -63,8 +63,7 @@
     <!-- END HEADER DESKTOP-->
 
     <!-- MAIN CONTENT-->
-
-    <app-product-list></app-product-list>
+    <router-outlet></router-outlet>
 
   </div>
 </div>
