--- a/src/app/components/product-details/product-details.html
+++ b/src/app/components/product-details/product-details.html
@@ -2,8 +2,8 @@
 
     <div class="container-fluid">
 
-        <p style="margin-top: 100px">product-details works!</p>
+        <p style="margin-top: 100px">{{ product.name }}</p>
 
     </div>
-    
+
 </div>
