--- a/src/app/components/product-list/product-list-grid.html
+++ b/src/app/components/product-list/product-list-grid.html
@@ -32,6 +32,47 @@
         </div>
         }
       </div>
+
+      <!-- begin footer -->
+
+      <div class="footer-pagination">
+        <div class="row">
+          <div class="col-md-3"></div>
+
+          <div class="col-md-9">
+            <div class="row">
+              <div class="col-md-9" style="padding-left: 3%;">
+
+                <ngb-pagination
+                  [(page)]="pageNumber"
+                  [pageSize]="pageSize"
+                  [collectionSize]="totalElements"
+                  [maxSize]="5"
+                  [boundaryLinks]="true"
+                  (pageChange)="listProducts()"
+                >
+                </ngb-pagination>                
+              </div>
+
+              <div class="col-md-3 mt-2" style="text-align: right;">
+                <span class="me-1">Page Size</span>
+
+                <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                  <option selected>5</option>
+                  <option>2</option>
+                  <option>10</option>
+                  <option>20</option>
+                  <option>50</option>
+                </select>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- end footer -->
+
     </div>
   </div>
 </div>
