--- a/src/app/components/product-list/product-list-grid.html
+++ b/src/app/components/product-list/product-list-grid.html
@@ -20,7 +20,7 @@
               {{ currProduct.unitPrice | currency:'USD' }}
             </div>
 
-            <a href="#" class="primary-btn">Add to cart</a>
+            <button (click)="addToCart(currProduct)" class="btn btn-primary btn-sm">Add to cart</button>
           </div>
         </div>
         }
