--- a/src/app/components/checkout/checkout.html
+++ b/src/app/components/checkout/checkout.html
@@ -14,6 +14,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
+
+                                @if (firstName?.invalid && (firstName?.dirty || firstName?.touched)) {
+                                    <div class="alert alert-danger">
+                                        @if (firstName?.errors?.['required'] || firstName?.errors?.['notOnlyWhitespace']) {
+                                            <div>First Name is required</div>
+                                        }
+
+                                        @if (firstName?.errors?.['minlength']) {
+                                            <div>First Name must be at least 2 characters long</div>
+                                        }
+                                    </div>
+                                }
+
                             </div>
                         </div>
                     </div>
@@ -25,6 +38,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
+
+                                @if (lastName?.invalid && (lastName?.dirty || lastName?.touched)) {
+                                    <div class="alert alert-danger">
+                                        @if (lastName?.errors?.['required'] || lastName?.errors?.['notOnlyWhitespace']) {
+                                            <div>Last Name is required</div>
+                                        }
+
+                                        @if (lastName?.errors?.['minlength']) {
+                                            <div>Last Name must be at least 2 characters long</div>
+                                        }
+                                    </div>
+                                }
+
                             </div>
                         </div>
                     </div>
@@ -36,6 +62,19 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text">
+
+                                @if (email?.invalid && (email?.dirty || email?.touched)) {
+                                    <div class="alert alert-danger">
+                                        @if (email?.errors?.['required']) {
+                                            <div>Email is required</div>
+                                        }
+
+                                        @if (email?.errors?.['pattern']) {
+                                            <div>Email must be a valid email address format</div>
+                                        }
+                                    </div>
+                                }
+
                             </div>
                         </div>
                     </div>
