--- a/src/app/components/checkout/checkout.html
+++ b/src/app/components/checkout/checkout.html
@@ -354,6 +354,14 @@
                                     <option>Visa</option>
                                     <option>Mastercard</option>
                                 </select>
+
+                                @if (creditCardType?.invalid && (creditCardType?.dirty || creditCardType?.touched)) {
+                                    <div class="alert alert-danger mt-1">
+                                        @if (creditCardType?.errors?.['required']) {
+                                            <div>Card Type is required</div>
+                                        }
+                                    </div>
+                                }
                             </div>
                         </div>
                     </div>
@@ -365,6 +373,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text">
+
+                                @if (creditCardNameOnCard?.invalid && (creditCardNameOnCard?.dirty || creditCardNameOnCard?.touched)) {
+                                    <div class="alert alert-danger">
+                                        @if (creditCardNameOnCard?.errors?.['required'] || creditCardNameOnCard?.errors?.['notOnlyWhitespace']) {
+                                            <div>Name is required</div>
+                                        }
+
+                                        @if (creditCardNameOnCard?.errors?.['minlength']) {
+                                            <div>Name must be at least 2 characters long</div>
+                                        }
+                                    </div>
+                                }
                             </div>
                         </div>
                     </div>
@@ -376,6 +396,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text">
+
+                                @if (creditCardNumber?.invalid && (creditCardNumber?.dirty || creditCardNumber?.touched)) {
+                                    <div class="alert alert-danger">
+                                        @if (creditCardNumber?.errors?.['required']) {
+                                            <div>Card Number is required</div>
+                                        }
+
+                                        @if (creditCardNumber?.errors?.['pattern']) {
+                                            <div>Card Number must be 16 digits long</div>
+                                        }
+                                    </div>
+                                }
                             </div>
                         </div>
                     </div>
@@ -387,6 +419,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
+
+                                @if (creditCardSecurityCode?.invalid && (creditCardSecurityCode?.dirty || creditCardSecurityCode?.touched)) {
+                                    <div class="alert alert-danger">
+                                        @if (creditCardSecurityCode?.errors?.['required']) {
+                                            <div>Security Code is required</div>
+                                        }
+
+                                        @if (creditCardSecurityCode?.errors?.['pattern']) {
+                                            <div>Security Code must be 3 digits long</div>
+                                        }
+                                    </div>
+                                }
                             </div>
                         </div>
                     </div>
